feature(identity): /search endpoint added